# django-quickstart-guide

./: README.md  pyproject.toml
